--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,17 +33,23 @@ dependencies:
   flutter:
     sdk: flutter
   flutter_chat_bubble: ^2.0.2
+  flutter_launcher_icons: ^0.13.0
+  flutter_native_splash: ^2.2.19
 
 dev_dependencies:
   flutter_lints: ^2.0.0
   flutter_test:
     sdk: flutter
 
+flutter_icons:
+  android: 'launcher_icon'
+  ios: true
+  image_path: 'assets/app_icon.png'
+
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
 # The following section is specific to Flutter packages.
 flutter:
-
   # The following line ensures that the Material Icons font is
   # included with your application, so that you can use the icons in
   # the material Icons class.
