Open in map app
En la página de agendar cita se creó un TextButton widget para abrir la aplicación de mapa nativo del móvil en la dirección del consultorio (coordenadas)

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,6 +35,7 @@ dependencies:
   flutter_chat_bubble: ^2.0.2
   flutter_launcher_icons: ^0.13.0
   flutter_native_splash: ^2.2.19
+  map_launcher: ^2.5.0+1
 
 dev_dependencies:
   flutter_lints: ^2.0.0
