--- a/ios/Runner/Info.plist
+++ b/ios/Runner/Info.plist
@@ -49,5 +49,10 @@
 		<true/>
 		<key>UIStatusBarHidden</key>
 		<false/>
+		<key>LSApplicationQueriesSchemes</key>
+		<array>
+   			 <string>googlechromes</string>
+    		<string>comgooglemaps</string>
+		</array>
 	</dict>
 </plist>
