--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,15 +28,23 @@ environment:
 # the latest version available on pub.dev. To see which dependencies have newer
 # versions available, run `flutter pub outdated`.
 dependencies:
+  build_runner: ^2.1.2
   cupertino_icons: ^1.0.2
   dropdown_button2: ^2.0.0
   flutter:
     sdk: flutter
   flutter_chat_bubble: ^2.0.2
+  flutter_datetime_picker: ^1.5.1
   flutter_launcher_icons: ^0.13.0
   flutter_native_splash: ^2.2.19
-  provider: ^6.0.5
+  hive: ^2.2.3
+  hive_flutter: ^1.1.0
+  hive_generator: ^2.0.0
+  http: ^0.13.6
   map_launcher: ^2.5.0+1
+  provider: ^6.0.5
+  socket_io_client: ^2.0.2
+  syncfusion_flutter_datepicker: ^21.2.4
 
 dev_dependencies:
   flutter_lints: ^2.0.0
